@@ -21,7 +21,6 @@ import org.springframework.stereotype.Service;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CompraServiceImpl implements CompraService{
@@ -111,6 +110,6 @@ public class CompraServiceImpl implements CompraService{
 
         return compraRepository.findAll().stream()
                 .map(CompraResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
